--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1210,7 +1210,7 @@ config TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_MMI
 	  touchscreens via the MMI design.
 
 source "drivers/input/touchscreen/gt9xx/Kconfig"
-config WAKE_GESTURES
-	bool "wake gestures"
+config SCREEN_OFF_GESTURES
+	bool "screen off gestures"
 
 endif
