--- a/arch/arm64/configs/cedric_defconfig
+++ b/arch/arm64/configs/cedric_defconfig
@@ -36,12 +36,25 @@ CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 
 #
+#Kernel Mods
+#
+CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_SOUND_CONTROL=y
+CONFIG_ADRENO_IDLER=y
+CONFIG_BLK_CGROUP=y
+CONFIG_CGROUP_WRITEBACK=y
+CONFIG_CFQ_GROUP_IOSCHED=y
+CONFIG_BFQ_GROUP_IOSCHED=y
+CONFIG_ZEN_INTERACTIVE=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+
+#
 # General setup
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-lineage"
+CONFIG_LOCALVERSION="RADIUM_REBORN"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
