--- a/arch/arm64/configs/montana_defconfig
+++ b/arch/arm64/configs/montana_defconfig
@@ -1889,6 +1889,7 @@ CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_GT9XX is not set
 # CONFIG_TOUCHSCREEN_MAXIM_STI is not set
 CONFIG_INPUT_MISC=y
+CONFIG_SCREEN_OFF_GESTURES=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
 CONFIG_INPUT_HBTP_INPUT=y
